# sputnik

./: Concept.rtf  README
src/: CMakeLists.txt  allegro_display.cpp  allegro_display.h  allegro_events.cpp  allegro_events.h  collide_component.cpp  collide_component.h  collide_subsystem.cpp  collide_subsystem.h  controller_component.cpp  controller_component.h  controller_subsystem.cpp  controller_subsystem.h  debug.cpp  debug.h  entity.h  entity_component.cpp  entity_component.h  entity_component_manager.cpp  entity_component_manager.h  entity_manager.cpp  entity_manager.h  performance_subsystem.cpp  performance_subsystem.h  physics_subsystem.cpp  physics_subsystem.h  platform.cpp  platform.h  player_component.cpp  player_component.h  player_controller_subsystem.cpp  player_controller_subsystem.h  player_subsystem.cpp  player_subsystem.h  render_subsystem.cpp  render_subsystem.h  sprite_component.cpp  sprite_component.h  sputnik.cpp  sputnik_config.h.in  (+10 more)
src/cmake/Modules/: FindAllegro.cmake  FindAllegro5.cmake
